--- a/style.css
+++ b/style.css
@@ -1,16 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Space Mono", monospace;
 }
 
-:root {
+:root{
     font-size: 62.5%;
-
-    --jagged-ice: #C5E4E7;
+--jagged-ice: #C5E4E7;
     --white: #FFF;
     --greyish-turquoise: #5E7A7D;
     --black-squeeze: #F3F9FA;
@@ -20,152 +18,146 @@
     --regent-grey: #7F9D9F;
     --water-leaf: #9FE8DF;
 }
-
-body {
+body{
     font-size: 1.6rem;
     background: var(--jagged-ice);
 }
-
-header {
+header{
     padding-top: 5rem;
     padding-bottom: 4rem;
-    display: flex;
+
+    display:flex;
     justify-content: center;
 }
 
-main {
+main{
     background-color: var(--white);
     border-radius: 2.5rem 2.5rem 0 0;
     padding: 3.2rem 2.4rem;
 }
 
-section {
-    width: 100%; /* Adicionado para consistência fora do media query */
-}
-
-.info {
+.info{
     padding-inline: .8rem;
-}
 
-.info strong {
+    strong{
     color: var(--greyish-turquoise);
     display: block;
     margin-bottom: .6rem;
-}
+    }
 
-.info div {
+div{
     margin-bottom: 3.2rem;
 }
 
-.input-box {
-    background: var(--black-squeeze);
-    padding: .6rem;
-    border-radius: .5rem;
-    display: flex;
-    align-items: center;
-}
 
-.input-box input {
-    background: transparent;
-    border: none;
-    text-align: right;
-    width: 100%;
-    outline: none;
-    font-size: 2.4rem;
-    font-weight: 700;
-    color: var(--sherpa-blue);
-}
+    .input-box{
+        background: var(--black-squeeze);
+        padding: .6rem;
+        border-radius: .5rem;
+        display: flex;
+        align-items: center;
+    
+        input{
+            background: transparent;
+            border: none;
+            text-align: right;
+            width: 100%;
+            outline: none;
+            font-size: 2.4rem;
+            font-weight: 700;
+            color: var(--sherpa-blue);
+        }
+    
+        input::placeholder{
+            color: var(--sherpa-blue);
+            opacity: 0.35;
+        }
+    }
 
-.input-box input::placeholder {
-    color: var(--sherpa-blue);
-    opacity: 0.35;
-}
-
-.input-box:has(input:focus) {
+.input-box:has(input:focus){
     outline: 2px solid var(--topaz);
 }
 
-.tip > div {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1.6rem;
-    margin-top: 1rem;
+
+    .tip > div{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1.6rem;
+        margin-top: 1rem;
+
+        button{
+            border: none;
+            background: var(--sherpa-blue);
+            color: var(--white);
+            font-size: 2.4rem;
+            border-radius: .5rem;
+            padding-block: .6rem;
+            font-weight: 700;
+        }
+
+        button:hover{
+            background: var(--water-leaf);
+            cursor: pointer;
+            transition: .3s;
+        }
+
+        .button-selected{
+            background: var(--topaz);
+        }
+
+        input{
+            width: 100%;
+            background: var(--black-squeeze);
+            font-size: 2.4rem;
+            text-align: center;
+            border: none;
+            border-radius: .5rem;
+            outline: none;
+            font-weight: 700;
+            color: var(--sherpa-blue);
+
+
+            &::placeholder{
+                color: var(--beetle-green);
+            }
+
+            &:focus{
+                outline: 2px solid var(--topaz);
+            }
+        }
+
+    }
 }
 
-.tip > div button {
-    border: none;
-    background: var(--sherpa-blue);
-    color: var(--white);
-    font-size: 2.4rem;
-    border-radius: .5rem;
-    padding-block: .6rem;
-    font-weight: 700;
-    transition: background 0.3s;
-}
-
-.tip > div button:hover {
-    background: var(--water-leaf);
-    cursor: pointer;
-}
-
-.tip > div .button-selected {
-    background: var(--topaz);
-    transition: background 0.3s;
-}
-
-.tip > div input {
-    width: 100%;
-    background: var(--black-squeeze);
-    font-size: 2.4rem;
-    text-align: center;
-    border: none;
-    border-radius: .5rem;
-    outline: none;
-    font-weight: 700;
-    color: var(--sherpa-blue);
-}
-
-.tip > div input::placeholder {
-    color: var(--beetle-green);
-}
-
-.tip > div input:focus-visible {
-    outline: 2px solid var(--topaz);
-}
-
-.results {
+.results{
     background: var(--sherpa-blue);
     border-radius: 1.5rem;
     padding: 4rem 2.4rem 2.4rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
 
-.results .amount,
-.results .total {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 2.4rem;
-}
+    .amount,
+    .total{
+       display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 2.4rem;
 
-.results p {
-    color: var(--white);
-    font-weight: 700;
-}
+        p{
+            color: var(--white);
+            font-weight: 700;
 
-.results p span {
-    color: var(--regent-grey);
-    font-size: 1.3rem;
-}
+            span {
+                color: var(--regent-grey);
+                font-size: 1.3rem;
+            }
+        }
 
-.results strong {
-    color: var(--topaz);
-    font-size: 3.2rem;
-}
+        strong{
+        color: var(--topaz);
+        font-size: 3.2rem;
+        }
+  }
 
-.results button {
+  button{
     width: 100%;
     font-size: 2rem;
     font-weight: 700;
@@ -175,43 +167,51 @@ section {
     border: none;
     padding-block: .9rem;
     border-radius: .5rem;
-    transition: background 0.3s;
 }
-
-.results button:hover {
+  button:hover{
     background: var(--water-leaf);
     cursor: pointer;
+    transition: .3s;
+  }
 }
 
 input::-webkit-inner-spin-button,
-input::-webkit-outer-spin-button {
+input::-webkit-inner-spin-button{
     display: none;
 }
 
-@media (min-width: 920px) {
-    header {
-        margin-top: 5rem;
-    }
-
-    main {
+@media(min-width: 920px){
+   header{
+    margin-top: 5rem;
+   }
+   
+    main{
         display: flex;
-        max-width: 92rem;
-        margin-inline: auto;
-        border-radius: 2.5rem;
-        padding: 4.8rem;
-        gap: 4.8rem;
-    }
+       max-width: 92rem;
+       margin-inline: auto;
+       border-radius: 2.5rem;
+       padding: 4.8rem;
+       gap: 4.8rem;
 
-    .info .tip > div {
-        grid-template-columns: repeat(3, 1fr);
-    }
+        section{
+            width: 100%;
+        }
 
-    .results {
-        padding: 4rem;
-    }
+       .info .tip div{
+            grid-template-columns: repeat(3, 1fr);
+        }
+.results{
+padding: 4rem;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
 
-    .results .amount strong,
-    .results .total strong {
+    .amount strong,
+    .total strong{
         font-size: 4.8rem;
+    }
+
+}
+
     }
 }
